[package]
name = "priclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0.8"
serde_json = "1.0"
bincode = "1.3.3"
blake2 = "0.9"
#crypto-hashes = "0.9"
hmac = "0.11"
sha2 = "0.9"
block-modes = "0.8.1"
aes = "0.7.5"
hex = "0.3.1"
pbkdf2 = "0.9.0"
config = "0.11"